final tweak of content

--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Corne - Mechanical Split Keyboard'
+title: 'Building a Mechanical Split Keyboard - Corne'
 pubDate: '2023-06-16T15:26:42.937Z'
 thumbnail: /images/corne-keyboard/post-thumbnail.jpg
-description: Build logs and notes from building my first mechnical split keyboard - Corne
+description: Notes from building my mechnical split keyboard - The Corne (crkbd) v3. This post covers the process of building this keyboard, and what I have learned along the way.
 tags:
 - Mechanical Keyboards
 - DIY
@@ -277,7 +277,11 @@ I put the switches and keycaps in. And I have to say I'm very happy with the res
 
 ## Keymaps
 
-The keyboard uses QMK firmware, so it is customizable with [Via](https://usevia.app/). However, the number of keys are much less than my previous 65% keyboard. It took me some time to come up with keymaps that work for me. As the time of writing, it is still not perfect, and I still keep tweaking the layouts from time to time. What I have so far are
+The keyboard uses QMK firmware, so it is customizable with [Via](https://usevia.app/). However, the number of keys are much less than my previous 65% keyboard.
+It took me some time to come up with keymaps that work for me.
+As the time of writing, it is still not perfect, and I still keep tweaking the layouts from time to time. My plan is to learn more about [mod-tap](https://github.com/qmk/qmk_firmware/blob/master/docs/mod_tap.md) / [home row mods](https://precondition.github.io/home-row-mods) and try to make use of them.
+
+What I have so far are:
 
 Layer 0: Traditional QWERTY layout.
 
@@ -309,9 +313,8 @@ Layer 2 (raised): Numpads, media controls, and keys to adjust my laptop's screen
   width={800}
 />
 
-I'm not 100% happy with the keymaps yet, but at least I don't miss anything in coding or English typing.
 Typing in Thai is still tricky because some characters are still missing.
-It's not a big problem for now. I can fix it later.
+It's not a big problem for now. I will deal with it later.
 
 ---
 
