fix lang attribute for the new post

--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -1,4 +1,5 @@
 ---
+language: en
 title: 'Building a Mechanical Split Keyboard - Corne'
 pubDate: '2023-06-16T15:26:42.937Z'
 thumbnail: /images/corne-keyboard/post-thumbnail.jpg
