--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -14,30 +14,35 @@ categories:
 
 import { Picture, Image } from '@astrojs/image/components';
 
-I entered the rabbit hole of mechanical keyboards in 2017. For the last couple of years, I settle with the 65% form factor and I find a balance between how it looks and the ease of use. My previous keyboards were a Gingko65, a Portico, and a few 60% ones.
+I entered the rabbit hole of mechanical keyboards in [2017](https://armno.medium.com/building-my-own-mechanical-keyboard-6903b887b93d). For the last couple of years, I settle with the 65% form factor and I find a balance between how it looks and the ease of use. My previous keyboards were a Gingko65, a Portico, and a few 60% ones.
 
-<div class="">
-  <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
+<div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
+  <figure>
     <Picture
+      class="mt-0 mb-2"
       src="/images/uses/ginkgo65-keyboard.jpg"
       alt="my Ginkgo65 mechanical keyboard at work"
       widths={[300,600,1200]}
       aspectRatio={1200/675}
       width={1200}
     />
+    <figcaption class="mt-0">Gingko65</figcaption>
+  </figure>
+  <figure>
     <Picture
+      class="mt-0 mb-2"
       src={import('./images/portico.jpg')}
       alt="My Portico Keyboard with MT3 Susuwatari Keycaps"
       widths={[300,600,1200]}
       aspectRatio={1200/675}
       width={1200}
     />
-  </div>
+    <figcaption class="mt-0">Portico</figcaption>
+  </figure>
 </div>
 
-Recently I stumbled upon a video [**How to build a handwired keyboard**](https://www.youtube.com/watch?v=hjml-K-pV4E) by Joe Scotto. It leads me to check out his YouTube channel.
-Then I found a few videos about **the Corne Keyboard**. It is a split keyboard. I knew nothing about a split keyboards but it looks interesting and decided to give it a try,
-purely out of curiosity.
+Recently I stumbled upon a video [**How to build a handwired keyboard**](https://www.youtube.com/watch?v=hjml-K-pV4E) by Joe Scotto. It leads me to check out his YouTube channel where I found a few videos about **the Corne Keyboard**. I knew nothing about a split keyboards but it looks interesting and decided to give it a try.
+Mainly because I'm curious, and partly because I don't have to deal with stabilizers in building this one.
 
 <figure>
   <Image
