change heading font to Frank Ruhl Libre

--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -1,4 +1,5 @@
 ---
+language: 'en'
 title: 'Tools I use - armno.in.th'
 description: 'A collection of hardware/software/tools I use on a daily basis.'
 thumbnail: /images/uses/laptop.jpg
