--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -1,6 +1,6 @@
 ---
 language: en
-title: 'Building a Mechanical Split Keyboard - Corne'
+title: 'Building a Corne - Mechanical Split Keyboard'
 pubDate: '2023-06-16T15:26:42.937Z'
 thumbnail: /images/corne-keyboard/post-thumbnail.jpg
 description: Notes from building my mechnical split keyboard - The Corne (crkbd) v3. This post covers the process of building this keyboard, and what I have learned along the way.
@@ -14,7 +14,7 @@ categories:
 
 import { Picture, Image } from '@astrojs/image/components';
 
-I entered the rabbit hole of mechanical keyboards in [2017](https://armno.medium.com/building-my-own-mechanical-keyboard-6903b887b93d). For the last couple of years, I settle with the 65% form factor and I find a balance between how it looks and the ease of use. My previous keyboards were a Gingko65, a Portico, and a few 60% ones.
+I have built a few mechanical keyboards since [2017](https://armno.medium.com/building-my-own-mechanical-keyboard-6903b887b93d). For the last couple of years, I settle with the 65% form factor and I find a balance between how it looks and the ease of use. My previous keyboards were a Gingko65, a Portico, and a few of custom 60% ones.
 
 <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
   <figure>
@@ -41,7 +41,8 @@ I entered the rabbit hole of mechanical keyboards in [2017](https://armno.medium
   </figure>
 </div>
 
-Recently I stumbled upon a video [**How to build a handwired keyboard**](https://www.youtube.com/watch?v=hjml-K-pV4E) by Joe Scotto. It leads me to check out his YouTube channel where I found a few videos about **the Corne Keyboard**. I knew nothing about a split keyboards but it looks interesting and decided to give it a try.
+Recently I stumbled upon a video [**How to build a handwired keyboard**](https://www.youtube.com/watch?v=hjml-K-pV4E) by Joe Scotto. I checked out his channel and I found a few videos about **the Corne Keyboard**. I knew nothing about a split keyboards and never imagine myself using one.
+But since I can't _unsee_ it anymore so I decided to give it a try.
 Mainly because I'm curious, and partly because I don't have to deal with stabilizers in building this one.
 
 <figure>
