--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -14,7 +14,10 @@ categories:
 
 import { Picture, Image } from '@astrojs/image/components';
 
-I have built a few mechanical keyboards since [2017](https://armno.medium.com/building-my-own-mechanical-keyboard-6903b887b93d). For the last couple of years, I settle with the 65% form factor and I find a balance between how it looks and the ease of use. My previous keyboards were a Gingko65, a Portico, and a few of custom 60% ones.
+When it comes to using mechanical keyboards, my preference are the 60%/65% ones where I find a balance between how they look and the ease of use.
+My previous keyboards were a Gingko65, a Portico, and [a](https://armno.in.th/blog/building-mechanical-keyboard/) [few](https://armno.in.th/blog/mechanical-keyboard-build-2/) [of](https://armno.in.th/blog/60-percent-mechanical-keyboard-with-arrows/) custom 60% ones.
+
+I think I have enough keyboards ... _at this size_ at least.
 
 <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
   <figure>
@@ -43,7 +46,7 @@ I have built a few mechanical keyboards since [2017](https://armno.medium.com/bu
 
 Recently I stumbled upon a video [**How to build a handwired keyboard**](https://www.youtube.com/watch?v=hjml-K-pV4E) by Joe Scotto. I checked out his channel and I found a few videos about **the Corne Keyboard**. I knew nothing about a split keyboards and never imagine myself using one.
 But since I can't _unsee_ it anymore so I decided to give it a try.
-Mainly because I'm curious, and partly because I don't have to deal with stabilizers in building this one.
+Mainly because I'm curious, and partly because there are no stabilizers involved in building this one.
 
 <figure>
   <Image
@@ -60,13 +63,15 @@ Mainly because I'm curious, and partly because I don't have to deal with stabili
 
 [**The Corne Keyboard**](https://github.com/foostan/crkbd) aka. "crkbd" is an opensource, vertically staggered, split keyboard designed by foostan.
 It has a few different variations that support both traditional MX or low-profile switches and can be built with either 5 or 6 columns.
-I chose the MX version because I already MX switches and keycaps around. The GitHub repo also has very details documentation for every variation.
+The GitHub repo also has very details documentation for every variation.
+
+I chose the MX version because I have only MX switches and keycaps around.
 
 ## Getting parts
 
-The parts list on build guide looks intimidating to me. I have no idea what TRRS or WS2812B mean. So I play safe by getting a set from [Beekeeb](https://shop.beekeeb.com/) shop on [Etsy](https://www.etsy.com/shop/beekeeb) that includes everything I need in one package. The set I get is the [Crkbd v3 (Corne Keyboard) MX Hotswap DIY Mechanical Ergonomic Hotswap Split Keyboard PCB](https://www.etsy.com/listing/972779149/crkbd-v3-corne-keyboard-mx-hotswap-diy). Kit option is “PCB + Parts”. It costs me HKD 982.40 / ~฿4,300 / ~$125.
+The parts list on build guide looks intimidating to me. I have no idea what TRRS or WS2812B mean. So I play safe by getting a set from [Beekeeb](https://shop.beekeeb.com/) shop on [Etsy](https://www.etsy.com/shop/beekeeb) that includes everything I need in one package. The set I get is the [Crkbd v3 (Corne Keyboard) MX Hotswap DIY Mechanical Ergonomic Hotswap Split Keyboard PCB](https://www.etsy.com/listing/972779149/crkbd-v3-corne-keyboard-mx-hotswap-diy). Kit option is “PCB + Parts”. It costs me HKD982.40 or ~฿4,300 / ~$125.
 
-While waiting for the parts to deliver, I check out different case designs and choose the [one desinged by VOID](https://www.printables.com/model/347524-corne-keyboard-case). I send the Printable link to a local 3D printing service and get the tented, 6 columns version of the case with PLA material. The case and plates costs me ~900 THB / $26. The outcome is OK though it also has some issues. More on that shortly.
+While waiting for the parts to deliver, I check out different case designs and choose the [one desinged by VOID](https://www.printables.com/model/347524-corne-keyboard-case). I send the Printable link to a local 3D printing service and get the tented, 6 columns version of the case with PLA material. The case and plates costs me ~฿900 or $26. The outcome is OK though it also has some issues. More on that shortly.
 
 <div class="full-bleed">
   <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
@@ -255,7 +260,7 @@ The next step is to check if all the keys work with the key tester in Via. I tes
 
 To be honest, I didn't expect it to work on the first attempt. But once I realize everything was functional, it is such a relief. All my time (and money) are not wasted. At least I should have a working split keyboard.
 
-I put the switches and keycaps in. And I have to say I'm very happy with the result.
+I put the switches and keycaps from my previous keyboards in. And I have to say I'm very happy with the result.
 
 - Switches: C3 Tangerine 67g (lubed & filmed), plus 1 Banana Split and 1 Alpaca switch just for fun.
 - Keycaps: MT3 Extended 2048 / GMK WoB Katakana
@@ -343,6 +348,7 @@ I struggled a lot and I was very slow in typing.
 
 My frustration lasts a few days before it gets better.
 I get used to typing with the correct fingers and allowed myself to ignore the weak pinky fingers.
+Changing the keycaps from MT3 to GMK profile also helps to reduce finger travel distance.
 I'm more relaxed and more comfortable now. Still make a lot of mistakes but I can type faster and I'm back at my normal speed for English typing or coding.
 
 Once I get comfortable with it, I think a split keyboard is more fun to use.
