--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -1,6 +1,6 @@
 ---
 language: en
-title: 'Building a Corne - Mechanical Split Keyboard'
+title: 'Building Corne - A Mechanical Split Keyboard'
 pubDate: '2023-06-16T15:26:42.937Z'
 thumbnail: /images/corne-keyboard/post-thumbnail.jpg
 description: Notes from building my mechnical split keyboard - The Corne (crkbd) v3. This post covers the process of building this keyboard, and what I have learned along the way.
